...
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactsTableViewCell" rowHeight="64" id="ydt-wI-ECQ" customClass="ContactsTableViewCell" customModule="Gojek_Demo" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="414" height="64"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                        <viewLayoutGuide key="safeArea" id="UuV-Ij-Ch0"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contacts" id="T6r-mo-zy5">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="TGc-BU-40G">
                            <color key="tintColor" red="0.31565719840000001" green="0.8916056752" blue="0.76077669859999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ft-D0-PUf">
                                                                                <rect key="frame" x="18.5" y="0.0" width="45" height="44"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="MessageButton"/>
                                                                                <state key="normal" image="message_button"/>
                                                                                <connections>
...
                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QYg-z1-QCa">
                                                                                <rect key="frame" x="18.5" y="0.0" width="45" height="44"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="CallButton"/>
                                                                                <state key="normal" image="call_button"/>
                                                                                <connections>
...
                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ri-TP-unO">
                                                                                <rect key="frame" x="18.5" y="0.0" width="45" height="44"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="MailButton"/>
                                                                                <state key="normal" image="email_button"/>
                                                                                <connections>
...
                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iCs-39-cQg">
                                                                                <rect key="frame" x="18.5" y="0.0" width="45" height="44"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="FavouriteButton"/>
                                                                                <state key="normal" image="favourite_button"/>
                                                                                <connections>
...
                        <viewLayoutGuide key="safeArea" id="AHg-pg-oiG"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact Details" id="NyC-iP-88L">
                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="yOj-0f-t75">
                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
                                                                        <subviews>
                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="First Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaseline
                                                                                <rect key="frame" x="24" y="20" width="78.5" height="19.5"/>
                                                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                                                        <rect key="frame" x="0.0" y="59.5" width="414" height="59.5"/>
                                                                        <subviews>
                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Last Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines
                                                                                <rect key="frame" x="24" y="20" width="78.5" height="19.5"/>
                                                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                        <viewLayoutGuide key="safeArea" id="5vq-Mr-8DM"/>
                    </view>
                    <navigationItem key="navigationItem" title="Edit Contact" id="Y9C-o5-ZT9">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="9wE-Lr-PAZ">
                            <connections>
...
