...
        }
    }
    @IBOutlet private weak var phoneNoTextField: UITextField! {
        didSet {
            self.phoneNoTextField.text = self.presenter?.phoneNumber
            self.phoneNoTextField.isAccessibilityElement = true
            self.phoneNoTextField.accessibilityIdentifier = "Phone Number"
        }
    }
    @IBOutlet private weak var emailTextField: UITextField! {
        didSet {
            self.emailTextField.text = self.presenter?.email
            self.emailTextField.isAccessibilityElement = true
            self.emailTextField.accessibilityIdentifier = "Email Id"
        }
    }
    
    @IBOutlet private weak var activityIndicatorView: UIActivityIndicatorView! {
        didSet {
            self.activityIndicatorView.stopAnimating()
...
